# claude-status-tool

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/claude_status/: cli.py  daemon.py  db.py  demo.py  hooks.py  process.py  scanner.py
tests/: generate_mock_db.py  test_daemon.py  test_db.py  test_hooks.py  test_process.py  test_scanner.py
