[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-status"
version = "0.1.0"
description = "Real-time status tracking for Claude Code sessions"
license = "MIT"
requires-python = ">=3.11"

[project.scripts]
claude-status = "claude_status.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_status"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = ["ruff", "pytest"]
